# oasp-protocol

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: docs.yml
0.1.0/: 404.html  index.html
0.1.0/appendix/changelog/: index.html
0.1.0/appendix/glossary/: index.html
0.1.0/search/: search_index.json
0.1.0/specification/: index.html
0.1.0/specification/architecture/: index.html
0.1.0/specification/connection/: index.html
0.1.0/specification/conventions/: index.html
0.1.0/specification/data-structures/: index.html
0.1.0/specification/error-handling/: index.html
0.1.0/specification/events-excel/: index.html
0.1.0/specification/events-ppt/: index.html
0.1.0/specification/events-word/: index.html
docs/: index.md
docs/appendix/: changelog.md  glossary.md
docs/specification/: architecture.md  connection.md  conventions.md  data-structures.md  error-handling.md  events-excel.md  events-ppt.md  events-word.md  index.md
latest/appendix/changelog/: index.html
latest/appendix/glossary/: index.html
latest/search/: search_index.json
latest/specification/: index.html
latest/specification/connection/: index.html
latest/specification/data-structures/: index.html
latest/specification/events-word/: index.html
scripts/docs/: __init__.py  config.py  tasks.py
